basetransform: Only use the cached transform on strictly equal caps

https://bugzilla.gnome.org/show_bug.cgi?id=663333